<resources>
    <string name="app_name">BMEF</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="cant_add">You cant add more subjects. Buy Pro version!</string>
    <string name="buy_now">Buy Now</string>
    <string name="advertise">No advertise available right now. Try again later!</string>
    <string name="my_subject">My Subjects</string>
    <string name="subject_saved">Subject added successfully!</string>
    <string name="subject_updated">Subject updated successfully!</string>
    <string name="attendance_saved">Attendance saved!</string>
    <string name="update">Update</string>
    <string name="update_proceed">Do you want to proceed?</string>
    <string name="yes">Yes</string>
    <string name="delete">Delete</string>
    <string name="delete_proceed">This will remove subject and all its attendance. This cant be undone. Do you want to proceed?</string>
    <string name="subject_deleted">Subject deleted!</string>
    <string name="no">No</string>
    <string name="no_subject_available">No subject available</string>
    <string name="select_date_time">Select date and time</string>
    <string name="all_p">All present</string>
    <string name="all_a">All absent</string>
    <string name="myschedule">My Schedule</string>
    <string name="promo">Promotional</string>
    <string name="rate">Rate us</string>
    <string name="upgradepro">Upgrade to Pro version!</string>
    <string name="about">About us</string>
    <string name="l1">Designed and developed by</string>
    <string name="alienart">PARADOX VISION</string>
    <string name="l2">Think Digital</string>
    <string name="rollno_alert">Enter proper student details(Roll from should be less than Roll to and Roll from should be greater than 0)</string>
    <string name="unfilled_alert">Seems like some field(s) remain unfilled!</string>
    <string name="subject_details">Subject Details</string>
    <string name="hsubject_name">Subject Name</string>
    <string name="hdepartment">Department</string>
    <string name="hdivision">Division</string>
    <string name="select_type">Select Type</string>
    <string name="lecture">Lecture</string>
    <string name="practical">Practical</string>
    <string name="seminar">Seminar</string>
    <string name="workshop">Workshop</string>
    <string name="exam">Exam</string>
    <string name="yearorstd">Year/Standard</string>
    <string name="student_details">Students Details</string>
    <string name="hroll_from">Roll no. from</string>
    <string name="hroll_to">Roll no. to</string>
    <string name="schedule_details">Schedule Details</string>
    <string name="subject_schedule">Subject timetable</string>
    <string name="add_new">Add New</string>
    <string name="edit_subject">Edit Subject</string>
    <string name="add_subject">Add Subject</string>
    <string name="alert">Alert!</string>
    <string name="subject_save_alert">Discard this subject?</string>
    <string name="attendance_update_alert">This attendance will be overwritten over existing one. Do you wish to proceed?</string>
    <string name="edit_attendance">Edit Attendance</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="attendance_save_alert">Discard this attendance?</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel.</string>
    <string name="discarded">Changes discarded!</string>
    <string name="mark_p">Marked all as present</string>
    <string name="mark_a">Marked all as absent</string>
    <string name="current_date_time">Current date and time is</string>
    <string name="schedule_info">Schedule</string>
    <string name="no_schedule">No schedule</string>
    <string name="export_alert_1">Nothing to export.</string>
    <string name="attendance_deleted">Attendance deleted</string>
    <string name="date_range">Set date range</string>
    <string name="no_record">No record available</string>
    <string name="show_records">Records</string>
    <string name="all_time">All time</string>
    <string name="today">Lectures today</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_seven">Last 7 days</string>
    <string name="last_thirty">Last 30 days</string>
    <string name="custom_range">Custom range</string>
    <string name="attendance_updated">Attendance updated!</string>
    <string name="export_snack">Spreadsheet exported to</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
</resources>
