<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/datetime"
        android:icon="@drawable/ic_event_white"
        android:orderInCategory="98"
        android:title="@string/select_date_time"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/overflow"
        android:icon="@drawable/ic_overflow"
        android:orderInCategory="99"
        android:title="More"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_mark_all"
                android:icon="@drawable/pr"
                android:orderInCategory="101"
                android:title="@string/all_p" />
            <item
                android:id="@+id/action_clear_all"
                android:icon="@drawable/ab"
                android:orderInCategory="102"
                android:title="@string/all_a" />
        </menu>
    </item>
</menu>