<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

        android:background="@drawable/bg"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingBottom="40.0dip">

            <TextView
                android:id="@+id/textV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""
                android:textSize="20.0sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""
                android:textSize="20.0sp" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="200.0dip"
                android:layout_height="200.0dip"
                android:layout_gravity="center"/>
               <!-- android:src="@drawable/alienart"-->

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""
                android:textSize="20.0sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/l1"
                android:textColor="#fffafafa" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/alienart"
                android:textColor="#fffafafa"
                android:textSize="25.0sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/l2"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#fffafafa" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/mail"
                    android:layout_width="@dimen/mini"
                    android:layout_height="@dimen/mini"
                    android:layout_margin="5.0dip"
                    android:background="@drawable/mail_selector" />

                <Button
                    android:id="@+id/www"
                    android:layout_width="@dimen/mini"
                    android:layout_height="@dimen/mini"
                    android:layout_margin="5.0dip"
                    android:background="@drawable/web_selector" />

                <Button
                    android:id="@+id/like"
                    android:layout_width="@dimen/mini"
                    android:layout_height="@dimen/mini"
                    android:layout_above="@+id/back"
                    android:layout_alignLeft="@id/back"
                    android:layout_margin="5.0dip"
                    android:background="@drawable/faceb_selector" />

                <Button
                    android:id="@+id/twitter"
                    android:layout_width="@dimen/mini"
                    android:layout_height="@dimen/mini"
                    android:layout_margin="5.0dip"
                    android:background="@drawable/twit_selector" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>